--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'kotlin-parcelize'
     id 'androidx.navigation.safeargs'
     id 'com.google.dagger.hilt.android'
+    id 'com.apollographql.apollo3'
 }
 
 android {
@@ -38,6 +39,21 @@ android {
         dataBinding = true
         viewBinding = true
     }
+
+    apollo {
+        generateKotlinModels.set(true)
+        packageNamesFromFilePaths()
+
+        service("service") {
+            packageName.set("com.example.graphql")
+
+//            introspection{
+//                endpointUrl.set("http://54.246.238.84:3000/graphql")
+//                schemaFile.set(file("src/main/graphql/introspectionSchema.json"))
+//                headers.put("Authorization", "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlSWQiOjEzOTAsImZJZCI6IkVOUjMyeDBIdElYblpVaXYiLCJzSWQiOjI4LCJpYXQiOjE2ODMxMDk1ODYsImV4cCI6MTY4NDMxOTE4Nn0.fCLdlkl3_9YAtl92Z0hZNI-5p9_ZQNlINzuiPbdjd8Q")
+//            }
+        }
+    }
 }
 
 dependencies {
@@ -67,4 +83,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     implementation 'tk.zielony:carbon:0.16.0.1'
+
+    //graphQL
+   implementation "com.apollographql.apollo3:apollo-runtime:3.8.1"
 }
